Added Concurrent Queue. Although this is not perfect. Skews do happen.
Added a class to handle relative estimation - work in progress.
    - Implemented setRef() and setNow() functions in this class

TODO
    CERES-ify. Use CERES as the solver.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,8 +145,8 @@ include
 add_executable(edge_alignment_node
     src/ea.cpp
     include/ConcurrentQueue.h
-    include/Frame.h
-    src/Frame.cpp
+    src/SolveEA.cpp
+    include/SolveEA.h
 )
 
 ## Add cmake target dependencies of the executable
